<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.muigorick.plashr.ui.bottomNavigation.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <deepLink app:uri="https://unsplash.com" />
        <action
            android:id="@+id/action_HomeFragment_to_SinglePhotoDetailsActivity"
            app:destination="@id/singlePhotoDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.muigorick.plashr.ui.bottomNavigation.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.muigorick.plashr.ui.bottomNavigation.collections.CollectionsFragment"
        android:label="@string/collections"
        tools:layout="@layout/fragment_collections" >
        <deepLink app:uri="https://unsplash.com/collections" />
        <action
            android:id="@+id/action_collections_to_collectionDetailsActivity"
            app:destination="@id/singleCollectionDetailsActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.muigorick.plashr.ui.bottomNavigation.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />




    <!-- Single Photo Details Activity with an argument of photo for our safeargs.
         However, the argument can be null -->
    <activity
        android:id="@+id/singlePhotoDetailsActivity"
        android:name="com.muigorick.plashr.ui.activities.photos.SinglePhotoDetailsActivity"
        android:label="activity_single_photo_details"
        tools:layout="@layout/activity_single_photo_details" />

    <!-- Single Collection Details Activity with an argument of collection for our safeargs
         but the argument can be null -->
    <activity
        android:id="@+id/singleCollectionDetailsActivity"
        android:name="com.muigorick.plashr.ui.activities.collections.SingleCollectionDetailsActivity"
        android:label="activity_single_collection_details"
        tools:layout="@layout/activity_single_collection_details">
        <argument
            android:name="Collection"
            android:defaultValue="@null"
            app:argType="com.muigorick.plashr.dataModels.collections.Collection"
            app:nullable="true" />
    </activity>


</navigation>